--- a/BestBite.html
+++ b/BestBite.html
@@ -11,7 +11,7 @@
       <div class="container">
         <div class="row">
             <div class="col-md-4">
-            <h1>BestBite</h1>
+            <a href="#"><h1>Best Bite</h1></a>
             </div>
             <div class="col-md-5 col-md-offset-3">
               <ul class="nav nav-pills">
@@ -26,10 +26,10 @@
       
     <div class="jumbotron">
       <div class="container">
-                <h1>Browse.</h1>
-                <h1>Create.</h1>
-                <h1>Enjoy.</h1>
-
+                <a href="#"><h1>Browse.</h1></a>
+                <a href="#"><h1>Create.</h1></a>
+                <a href="#"><h1>Enjoy.</h1>
+</a>
         </div>
        
       </div>
